fix(Changelog): change contentContainer height from px to vh to avoid window overflow on smaller screens

--- a/src/components/Changelog/Changelog.css
+++ b/src/components/Changelog/Changelog.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     padding: 33px;
     overflow-y: auto;
-    max-height: 732px;
+    max-height: 70vh;
     box-sizing: border-box;
 }
 
